--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="style.css">
-  <title>Scientific calculator HTML+CSS</title>
+  <title>Scientific calculator</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
@@ -18,7 +18,7 @@
     
     <div class="screen">
         <div class="input">Developer</div>
-        <div class="main-display">WHITE CODER</div>
+        <div class="main-display"CASIO"</div>
     </div>
     
     <div class="modifiers">
