--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
     <div class="screen">
         <div class="input">Developer</div>
-        <div class="main-display"CASIO"</div>
+        <div class="main-display"CASIO</div>
     </div>
     
     <div class="modifiers">
